--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-06  Craig Burley  <craig@jcb-sc.com>
+
+	* g77.f-torture/execute/960317-1.f: New (old) test.
+	* g77.f-torture/execute/970625-2.f: Ditto.
+
 Mon Mar  1 23:29:14 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* g++.old-deja/g++.law/weak1.C: New test.
