--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar  7 01:58:47 1999  Richard Henderson  <rth@cygnus.com>
+
+	* cse.c (canon_hash): Never reject hard regs in CCmode.
+
 Sun Mar 7 01:15:04 PST 1999 Jeff Law  (law@cygnus.com)
 
 	* version.c: Bump for snapshot.
