--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar  7 02:44:15 1999  Richard Henderson  <rth@cygnus.com>
+
+	* recog.c (push_operand, pop_operand): VOIDmode needn't match modes.
+
 Sun Mar  7 01:58:47 1999  Richard Henderson  <rth@cygnus.com>
 
 	* cse.c (canon_hash): Never reject hard regs in CCmode.
