* system.h (const, inline): Move the stage2 handling of these         keywords-as-macros from here...         * gansidecl.h (const, inline): ...to here. (This became necessary after using `const' in config directory headers, which get included before system.h does.  If we're going to reset these keywords, we must do so before absolutely any other header file.)
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25626 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Sun Mar  7 08:05:27 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* system.h (const, inline): Move the stage2 handling of these
+ 	keywords-as-macros from here...
+
+	* gansidecl.h (const, inline): ...to here.
+
 Sun Mar  7 02:44:15 1999  Richard Henderson  <rth@cygnus.com>
 
 	* recog.c (push_operand, pop_operand): VOIDmode needn't match modes.
