move test from execute to compile
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25630 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-07  Craig Burley  <craig@jcb-sc.com>
+
+	* g77.f-torture/compile/960317-1.f: Moved from being
+	in execute/.  (Somehow I didn't notice "SUBROUTINE...".)
+
 1999-03-06  Craig Burley  <craig@jcb-sc.com>
 
 	* g77.f-torture/execute/960317-1.f: New (old) test.
