* version.c: Bump for prerelease.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25633 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/ChangeLog
+++ b/egcs_1_1_branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  8 01:19:23 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* version.c: Bump for prerelease.
+
 Mon Mar  8 01:16:30 1999  Manfred Hollstein  <manfred@s-direktnet.de>
 			  Jeff Law <law@cygnus.com>
 
