--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  8 18:47:11 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* regmove.c (copy_src_to_dest): New argument max_old_uid.
+
 Mon Mar  8 08:23:00 1999  Bruce Korb <korb@datadesign.com>
 	* ChangeLog: merged entries from fixincl-branch
 
