--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Tue Mar  9 09:33:16 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (toplev.o): Depend on $(BASIC_BLOCK_H).
+
+	* toplev.c: Include basic-block.h.
+
 Tue Mar  9 02:08:17 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* i386.md (zero_extendhisi2): Split into an expander and anonymous
