--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -11,6 +11,10 @@ Tue Mar  9 09:33:16 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 Tue Mar  9 02:08:17 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* calls.c (compute_argument_addresses): New function.
+	(rtx_for_function_call): New function.
+	(expand_call): Use them.
+
 	* i386.md (zero_extendhisi2): Split into an expander and anonymous
 	pattern.  Add new anonymous pattern for use when optimizing for
 	size or for the PPro.
