* i386.md (ashlsi3 splitter): Fix typo in last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25654 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar  9 15:26:02 1999  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* i386.md (ashlsi3 splitter): Fix typo in last change.
+
 Tue Mar  9 11:35:20 1999  Richard Henderson  <rth@cygnus.com>
 
 	* reg-stack.c (stack_reg_life_analysis): Use returnjump_p
