--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -4907,7 +4907,7 @@ byte_xor_operation:
    (set (match_dup 0) (ashift:SI (match_dup 0) (match_dup 3)))]
   "
 {
-  operands[3] = GEN_INT (INTVAL (operands[2] - 3));
+  operands[3] = GEN_INT (INTVAL (operands[2]) - 3);
   operands[2] = GEN_INT (3);
 }")
 
