--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -15,6 +15,8 @@ Tue Mar  9 09:33:16 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 Tue Mar  9 02:08:17 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* calls.c (expand_call): Slightly reorganize code.
+
 	* calls.c (compute_argument_addresses): New function.
 	(rtx_for_function_call): New function.
 	(expand_call): Use them.
