--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -25,6 +25,9 @@ Tue Mar  9 09:33:16 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 Tue Mar  9 02:08:17 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* calls.c (load_register_parameters): New function.
+	(expand_call): Use it.
+
 	* calls.c (expand_call): Slightly reorganize code.
 
 	* calls.c (compute_argument_addresses): New function.
