--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-09  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* call.c (add_builtin_candidates): Handle overloaded conversion ops.
+
 1999-03-09  Mark Mitchell  <mark@markmitchell.com>
 
 	* cp-tree.h (flag_access_control): Declare.
