* search.c (dfs_canonical_queue): New function. 	(dfs_assert_unmarked_p): Likewise. 	(assert_canonical_unmarked): Likewise. 	(access_in_type): Use it. 	(accessible_p): Likewise.  Walk the whole tree when umarking.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25668 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 1999-03-10  Mark Mitchell  <mark@markmitchell.com>
 
+	* search.c (dfs_canonical_queue): New function.
+	(dfs_assert_unmarked_p): Likewise.
+	(assert_canonical_unmarked): Likewise.
+	(access_in_type): Use it.
+	(accessible_p): Likewise.  Walk the whole tree when umarking.
+
 	* sig.c (build_signature_table_constructor): Use accessible_p
 	instead of compute_access.
 
