--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -22,6 +22,20 @@ Wed Mar 10 23:11:19 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 Wed Mar 10 20:28:29 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* gcse.c: More comments, whitespace and similar fixes.
+	(dump_cuid_table, maybe_set_rd_gen, dump_cprop_data): Delete.
+	(dump_pre_data, compute_cprop_local_properties): Likewise.
+	(one_classic_gcse_pass): Lose unused argument.  All callers changed.
+	(compute_hash_table, compute_expr_hash_table): Likewise.
+	(compute_set_hash_table, one_pre_gcse_pass, mark_call): Likewise.
+	(cprop_insn, cprop, one_cprop_pass): Add new argument ALTER_JUMPS.
+	All callers changed.  Only alter jumps if ALTER_JUMPS is nonzero.
+	Lose unused argument.
+	(gcse_main): Always run a cprop pass after finishing global cse.
+	(compute_local_properties): New function.
+	(hash_scan_pat, hash_scan_insn): No longer call maybe_set_rd_gen.
+	(compute_cprop_data): Use compute_local_properties.
+
 	* gcse.c: Update various comments.
 	(current_function_calls_longjmp): Delete declaration.
 
