--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 11 00:20:52 1999  Alexandre Oliva <oliva@dcc.unicamp.br>
+
+	* gcc.texi: Update bug reporting instructions to match
+	current ezmlm list reality.
+
 Wed Mar 10 23:11:19 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.c (print_file_name, print_prog_name, spec_machine,
