--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 10 23:20:11 1999  Per Bothner  <bothner@cygnus.com>
+
+	* jcf-write.c (generate_bytecode_insns):  Handle __builtin_fmod, for %.
+
 Fri Mar  5 15:17:29 1999  Per Bothner  <bothner@cygnus.com>
 
 	* lex.c (java_parse_end_comment):  Take extra parameter (next char).
