--- a/egcs_1_1_branch/gcc/ChangeLog
+++ b/egcs_1_1_branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 11 00:20:52 1999  Alexandre Oliva <oliva@dcc.unicamp.br>
+
+	* gcc.texi: Update bug reporting instructions to match
+	current ezmlm list reality.
+
 Mon Mar  8 01:19:23 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* version.c: Bump for prerelease.
