* sdbout.c (plain_type_1): Make boolean types work better with sdb.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25686 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-11  Colin Smith <colin@wrs.com>
+
+	* sdbout.c (plain_type_1): Make boolean types work better with sdb.
+
 Thu Mar 11 00:20:52 1999  Alexandre Oliva <oliva@dcc.unicamp.br>
 
 	* gcc.texi: Update bug reporting instructions to match
