--- a/libstdc++/ChangeLog
+++ b/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 01:07:55 1999  Franz Sirl <Franz.Sirl-kernel@lauterbach.com>
+
+	* configure.in: Add mh-*pic handling for alpha, arm, powerpc
+
 Fri Mar  5 02:16:39 1999  Doug Rabson  <dfr@freebsd.org>
 
 	* configure.in: Support shared libs on FreeBSD 3.x and 4.x
