* pexecute.c (__CYGWIN32__): Rename to         (__CYGWIN__): this.         * xmalloc.c: Likewise.         Changes to support i386-pc-uwin.         * configure.in (*-*-uwin*): Workaround for vfork bug.         * configure: Regenerate.         * pexecute.c (pexecute): Be like standard Unix.         (pwait): Likewise.         * xmalloc.c (first_break): Define.         (xmalloc_set_program_name): Use.         (xmalloc): Use.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25694 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,18 @@
+Thu Mar 11 01:22:58 1999  Mumit Khan  <khan@xraylith.wisc.edu>
+
+	* pexecute.c (__CYGWIN32__): Rename to
+	(__CYGWIN__): this.
+	* xmalloc.c: Likewise.
+
+	Changes to support i386-pc-uwin.
+	* configure.in (*-*-uwin*): Workaround for vfork bug.
+	* configure: Regenerate.
+	* pexecute.c (pexecute): Be like standard Unix.
+	(pwait): Likewise.
+	* xmalloc.c (first_break): Define.
+	(xmalloc_set_program_name): Use.
+	(xmalloc): Use.
+
 Thu Mar 11 01:07:55 1999  Franz Sirl <Franz.Sirl-kernel@lauterbach.com>
 
 	* config.table: Cleanup and add mh-*pic handling for alpha, arm, powerpc
